--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
+              "host":"0.0.0.0",
+              "port":4200,
               "browserTarget": "happines-lunch:build:production"
             },
             "development": {
